--- a/indiv_comp.ipynb
+++ b/indiv_comp.ipynb
@@ -421,11 +421,11 @@
     "###  Joint likelihood, $Pr(e^{obs}|\\{w_i^g,\\sigma_i^g,\\mu_i^g\\},g)$ \n",
     "\n",
     "Since the intrinsic ellipticities are not interesting, we marginalize them out:\n",
-    "\\begin{align}\n",
+    "\begin{align}\n",
     "Pr(e^{obs}|\\{w^g_i,\\sigma^g_i,\\mu^g_i\\},g) & = \\prod_{k} \\int \\int Pr(e^{obs}_k|e^{lens}_k) \\times Pr(e^{lens}_k|e_k,g) \\times  Pr(e_k|\\{w_i^g,\\sigma_i^g,\\mu_i^g\\}) \\,de_k \\,de^{lens}_k\\\\\n",
     "                                     & = \\prod_{k} \\int \\int  Pr(e^{obs}_k|e^{lens}_k) \\times  \\delta (e^{lens}_k−(e_k+g)) \\times  Pr(e_k|\\{w_i^g,\\sigma_i^g,\\mu_i^g\\}) \\,de_k \\,de^{lens}_k\\\\\n",
     "                                     & = \\prod_k\\frac{1}{{2\\pi}\\sigma_k^2} e^{\\frac{−(e^{obs}_{1,k}−e^{lens}_{1,k})^2}{2\\sigma_k^2} + \\frac{−(e^{obs}_{2,k}−e^{lens}_{2,k})^2}{2\\sigma_k^2}} \\times  \\sum_i^{N_g} w_{1,i}^g \\mathcal{N}(0,\\sigma_{1,i}^g) \\times \\sum_i^{N_g} w_{2,i}^g \\mathcal{N}(0,\\sigma_{2,i}^g)$\\\\\n",
-    "                                     & = \\prod_{k} \\sum_i^{N_g}  \\int \\int \\bigg( \\mathcal{N}((e^{obs}_{1,k}-(e_{1,k}+g)),\\sigma_k) \\times   w_{1,i}^g \\mathcal{N}(0,\\sigma_{1,i}^g) \\bigg) \\times \\bigg( \\mathcal{N}((e^{obs}_{2,k}-(e_{2,k}+g)),\\sigma_k)  \\times   w_{2,i}^g \\mathcal{N}(0,\\sigma_{2,i}^g) \\bigg) de_{1,k}de_{2,k}\\end{align} "
+    "                                     & = \\prod_{k} \\sum_i^{N_g}  \\int \\int \\bigg( \\mathcal{N}((e^{obs}_{1,k}-(e_{1,k}+g)),\\sigma_k) \\times   w_{1,i}^g \\mathcal{N}(0,\\sigma_{1,i}^g) \\bigg) \\times \\bigg( \\mathcal{N}((e^{obs}_{2,k}-(e_{2,k}+g)),\\sigma_k)  \\times   w_{2,i}^g \\mathcal{N}(0,\\sigma_{2,i}^g) \\bigg) de_{1,k}de_{2,k}\end{align} "
    ]
   },
   {
