--- a/indiv_comp.ipynb
+++ b/indiv_comp.ipynb
@@ -433,7 +433,7 @@
    "metadata": {},
    "source": [
     "The multiplication of two normal functions is a gaussian  function with a normal function as normalization factor. Integrating over $e_k$ gives\n",
-    "## $Pr(e^{obs}|\\{w_i,\\sigma_i\\},g)  = \\prod_{k} \\sum_i^{N_g} \\frac{ w_{1,i}^g  \\mathcal{exp}\\bigg(\\frac{-(g_1-e^{obs}_{1,k})^2}{2 (\\sigma_k^2+\\sigma_{1,i}^g})\\bigg ) \\times w_{2,i}^g  \\mathcal{exp}\\bigg(\\frac{-(g_2-e^{obs}_{2,k})^2}{2 (\\sigma_k^2+\\sigma_{2,i}^g})\\bigg )} {2 \\pi \\sqrt{(\\sigma_k^2+\\sigma_{1,i}^g) (\\sigma_k^2+\\sigma_{2,i}^g)}}$\n",
+    " $Pr(e^{obs}|\\{w_i,\\sigma_i\\},g)  = \\prod_{k} \\sum_i^{N_g} \\frac{ w_{1,i}^g  \\mathcal{exp}\\bigg(\\frac{-(g_1-e^{obs}_{1,k})^2}{2 (\\sigma_k^2+\\sigma_{1,i}^g})\\bigg ) \\times w_{2,i}^g  \\mathcal{exp}\\bigg(\\frac{-(g_2-e^{obs}_{2,k})^2}{2 (\\sigma_k^2+\\sigma_{2,i}^g})\\bigg )} {2 \\pi \\sqrt{(\\sigma_k^2+\\sigma_{1,i}^g) (\\sigma_k^2+\\sigma_{2,i}^g)}}$\n",
     "\n",
     "\n",
     "\n",
