--- a/indiv_comp.ipynb
+++ b/indiv_comp.ipynb
@@ -442,10 +442,10 @@
     "\n",
     "### Let's MCMC!\n",
     "\n",
-    "- The total number of free parametrs we want to measure are $(3N_g-1)+1$. \n",
-    "- $N_g$ gaussians, each with 2 parametrs $\\{w^g,\\sigma^g\\}$\n",
+    "- The total number of free parametrs we want to measure are $2(2N_g-1)+2$. \n",
+    "- $N_g$ gaussians, each with 2 \\times 2 parametrs $\\{w^g,\\sigma^g\\}$\n",
     "- -1 comes from $\\sum_i w_i^g=1$ \n",
-    "- +1 for g"
+    "- +2 for g"
    ]
   },
   {
